    procedure was changed to keep fslio in the package. This version contains
    more up-to-date scripts than the one in the nifticlibs package.
  * Install im* and tcl scripts from local fslio sources, instead of using the
    (discontinued) ones in the nifticlibs package. Therefore also removing
    dependency to 'nifti-bin'.

 -- Michael Hanke <michael.hanke@gmail.com>  Mon, 29 Sep 2008 21:08:52 +0200

fsl (4.1.0-1) unstable; urgency=low

  * New Upstream Version.
  * Bumped Standard version to 3.8.0 -- no changes necessary.

 -- Michael Hanke <michael.hanke@gmail.com>  Thu, 14 Aug 2008 13:14:53 +0200

fsl (4.0.4-2) unstable; urgency=low

  * Alternatively use octave3.0-headers (instead of just octave2.1-headers)
    package to determine octave paths.

 -- Michael Hanke <michael.hanke@gmail.com>  Wed, 21 May 2008 09:20:29 +0200

fsl (4.0.4-1) unstable; urgency=low

  * New bugfix release.
  * Install missing IRTK configuration, which are not covered by the IRTK
    liccense.

 -- Michael Hanke <michael.hanke@gmail.com>  Tue, 01 Apr 2008 11:04:19 +0200

fsl (4.0.3-2) unstable; urgency=low

  * Applied upstream patch to fix some problems with boolean commandline
    options.

 -- Michael Hanke <michael.hanke@gmail.com>  Sat, 09 Feb 2008 13:15:21 +0100

fsl (4.0.3-1) unstable; urgency=low

  * New upstream release. Some bugfixes in bet2 and possum.
  * Removed all fftw-related stuff from the build-dependencies. Apparently it
    is not necessary anymore. Thanks to Paul Brossier for reporting
    (Closes: #460270).

 -- Michael Hanke <michael.hanke@gmail.com>  Wed, 23 Jan 2008 17:09:38 +0100

fsl (4.0.2-3) unstable; urgency=low

  * Fixed some bugs for GCC 4.3 compatibility.
  * Updated build-dependencies for libnifti transition.

 -- Michael Hanke <michael.hanke@gmail.com>  Sat, 05 Jan 2008 15:26:59 +0100

fsl (4.0.2-2) unstable; urgency=low

  * Refurbished debian/rules. Now honours 'noopt' and builds with debugging
    symbols by default.