@@ -2,12 +2,11 @@ debian/tmp/bin/* usr/lib/fsl
 debian/tmp/{tcl,etc} usr/share/fsl
 debian/tmp/etc/fslconf/feat.tcl etc/fsl
 debian/tmp/fsl.xpm usr/share/pixmaps
+debian/tmp/etc usr/share/fsl
 
-etc usr/share/fsl
 lib/*.so usr/lib/fsl
 doc/images usr/share/fsl/doc
 extras/irtk/* usr/lib/fsl/DR
-src/fslio/{im*,remove_ext} usr/lib/fsl
 src/fslio/*.tcl usr/share/fsl/tcl
 
 debian/fsl.sh etc/fsl
