@@ -6,8 +6,12 @@ fsl (4.1.0+fslio1-1) unstable; urgency=low
   * Install im* and tcl scripts from local fslio sources, instead of using the
     (discontinued) ones in the nifticlibs package. Therefore also removing
     dependency to 'nifti-bin'.
+  * Do not install installer script -- useless on Debian.
+  * Remove broken get-orig-source target from debian/rules. The repackaging
+    procedure is implemented in the 'repackage-fsl' script shipped with the
+    fslview package.
 
- -- Michael Hanke <michael.hanke@gmail.com>  Mon, 29 Sep 2008 21:08:52 +0200
+ -- Michael Hanke <michael.hanke@gmail.com>  Tue, 30 Sep 2008 11:24:01 +0200
 
 fsl (4.1.0-1) unstable; urgency=low
 
